1. Fix "Hanging Lantern" name -- Tara can't find any reason why the name might have changed. 2. Make Ace Tayloe's name consistent. 3. There are cellspacing directions on tables, which are obsolete and better done by CSS. Fix the tables here.

--- a/NEIL/NEILStylesheet.css
+++ b/NEIL/NEILStylesheet.css
@@ -213,7 +213,9 @@ table.newEnglandInterconTable,
 table.newEnglandNELCOTable,
 table.otherLARPSitesTable {
 	border-bottom: 2px solid #49176D;
+	border-collapse: collapse;
 	border-right: 2px solid #49176D;
+	border-spacing: 0;
     margin-left: auto;
     margin-right: auto;
     margin-top: 2em;
